# EncriptionAlgorithms

./: CMakeLists.txt  README.md  caesarcipher.cpp  commonAlghorithms.h  encryptionalgorithm.cpp  encryptionalgorithm.h  gronsfeldcipher.cpp  gronsfeldcipher.h  magicsquarecipher.cpp  magicsquarecipher.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  transpositioncipher.cpp  transpositioncipher.h
CipherConsoleServer/: CMakeLists.txt  cipherstcpserver.cpp  cipherstcpserver.h  main.cpp
CipherGuiClient/: CMakeLists.txt  cipherstcpclient.cpp  cipherstcpclient.h  main.cpp  main.qml
CiphersLibrary/: CMakeLists.txt  CiphersLibrary_global.h  cipherslibrary.cpp  cipherslibrary.h  commonAlghorithms.h
CiphersLibrary/ciphers/: caesarcipher.cpp  caesarcipher.h  encryptionalgorithm.h  giovanniportacipher.cpp  giovanniportacipher.h  gronsfeldcipher.h  magicsquarecipher.cpp  magicsquarecipher.h  playfaircipher.h  spiralcipher.cpp  spiralcipher.h  transpositioncipher.h  trithemiuscipher.h  vigenerecipher.h
CiphersLibrary/dictionaries/: cyrillicdictionary.cpp  cyrillicdictionary.h  dictionary.cpp  dictionary.h  digitdictionary.cpp  digitdictionary.h
ciphers/: caesarcipher.h  giovanniportacipher.cpp  giovanniportacipher.h  gronsfeldcipher.h  magicsquarecipher.h  playfaircipher.cpp  playfaircipher.h  transpositioncipher.cpp  transpositioncipher.h  trithemiuscipher.cpp  trithemiuscipher.h  vigenerecipher.cpp  vigenerecipher.h
dictionaries/: cyrillicdictionary.cpp  cyrillicdictionary.h  dictionary.cpp  dictionary.h  digitdictionary.cpp  digitdictionary.h
